--- a/ansible_config/roles/ansible-role-haproxy/templates/haproxy.cfg
+++ b/ansible_config/roles/ansible-role-haproxy/templates/haproxy.cfg
@@ -30,4 +30,4 @@ backend jenkins
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
     reqrep ^([^\ :]*)\ /(.*)     \1\ /\2
     acl response-is-redirect res.hdr(Location) -m found
-    rspirep (http)://127.0.0.1:8080/(.*) https://jenkins.esales.com.br:443/\2 if response-is-redirect
+    rspirep (http)://127.0.0.1:8080/(.*) https://jenkins.mycompany.com:443/\2 if response-is-redirect
